--- a/reportsetting/app/index.html
+++ b/reportsetting/app/index.html
@@ -18,7 +18,10 @@
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
+  <script src="lib/jquery-1.9.1.js"></script>
+  <script src="lib/bootstrap.js"></script>
   -->
+  <script src="lib/underscore-1.4.4.js"></script>
   <script src="lib/angular/angular.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
